--- a/frontEnd/src/app/components/orden-trabajo/orden-trabajo.component.css
+++ b/frontEnd/src/app/components/orden-trabajo/orden-trabajo.component.css
@@ -15,14 +15,14 @@ body {
     background-color: #d1d1d1;
   }
   .imgIcono{
-    height: 50px;
-    width: 270px;
+    height: 60px;
+    width: 260px;
     padding-left: 25px;
     padding-bottom: 10px;
   }
   /* Barra lateral (Sidebar) */
   .sidebar {
-    background-color: #bebcc2;
+    background-color: #afc0d3;
     padding-top: 15px;
     box-shadow: 2px 2px 15px 5px rgba(0, 0, 0, 0.2);
     /*box-shadow: 8px 4px #d8d7d8;*/
@@ -31,6 +31,8 @@ body {
   .FlexLista{
     display: flex;
     flex-direction: row;
+    padding-bottom: 10px;
+    padding-top: 5px;
   }
   .ULestilo{
     padding-left: 0px !important; 
@@ -42,7 +44,12 @@ body {
   }
   .txtNav {
     margin: 5px;
-    color: black;
+    margin-left: 20px;
+    display: flex;
+    justify-content: center;
+    width: 300px;
+    background-color: #156b8d;
+    color: rgb(255, 255, 255);
     padding: 12px 20px;
     text-decoration: none;
     font-size: 18px;
@@ -51,8 +58,8 @@ body {
     border-radius: 8px;
   }
   .txtNav:hover{
-    background-color: rgb(230, 230, 230);
-    width: 230px;
+    background-color: #3ba3cc;
+    width: 300px;
   }
   .spanNav{
   margin-top: 2px;
@@ -228,7 +235,7 @@ body {
 
 .Btn {
     display: flex;
-    align-items: center;
+    align-items: flex-end;
     justify-content: flex-start;
     margin-top:550px;
     margin-left: 30px;
@@ -501,3 +508,130 @@ body {
   display: flex;
   flex-direction: row;
 }
+
+/*INICIO DE FORMULARIO*/
+
+* {    
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+.content {
+  height: 100%;
+  font-family: Arial, sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.form-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+  padding: 20px;
+  
+  background-color: #c4d8e7;
+  border-radius: 10px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.form-group {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 15px;
+  width: 100%;
+}
+
+.selectOptions {
+  padding: 5px;
+  border: 1px solid #828385;
+  border-radius: 5px;
+  font-size: 13px;
+  width: 100%;
+  margin-bottom: 10px;
+  background-color: #e6e6e6;
+  height: 40px;
+}
+
+.selectInput{
+  height: 100px;
+
+}
+
+.inputFormOT{
+  border: 1px solid #969292;
+  background-color: #f2f5f7;
+  
+}
+
+
+.form-group:last-child {
+  margin-bottom: 0;
+}
+
+.form-buttons {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  margin-top: 5px;
+}
+
+button {
+  padding: 10px ;
+  border: none;
+  border-radius: 5px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.btn-submit {
+  width: 100%;
+  background-color: #4CAF50;
+  color: white;
+}
+
+.btn-cancel {
+  background-color: #f44336;
+  color: white;
+}
+
+/* Estilo para el hover de los botones */
+button:hover {
+  opacity: 0.9;
+}
+.formBottom{
+  margin-bottom: 5px !important;
+  margin-top: 2px !important;
+}
+.inputDate{
+  padding: 12px;
+}
+.vistaTXT{
+  font-size: 30px;
+  font-family: Arial;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: start;
+
+}
+.vistaPreviaUl{
+  list-style: none;
+  padding-top: 50px;
+  padding-bottom: 100px;
+  padding-right: 30vh;
+}
+.vistaPreviaLi{
+  margin: 12px;
+  width: 400px;
+}
+.liSubrayado{
+  text-decoration: underline wavy;
+ 
+}
+
+
+/*FIN DE FORMULARIO*/
