--- a/frontEnd/src/app/components/login/login.component.html
+++ b/frontEnd/src/app/components/login/login.component.html
@@ -19,7 +19,7 @@
                    <form class="flip-card__form" action="">
                       <input class="flip-card__input" name="email" placeholder="Usuario" type="email">
                       <input class="flip-card__input" name="password" placeholder="Contraseña" type="password">
-                      <button class="flip-card__btn"><a href="/inicio">Log in</a></button>
+                      <button class="flip-card__btn"><a href="/ot">Log in</a></button>
                    </form>
                 </div>
 
