--- a/frontEnd/src/app/components/orden-trabajo/orden-trabajo.component.html
+++ b/frontEnd/src/app/components/orden-trabajo/orden-trabajo.component.html
@@ -16,7 +16,7 @@
         </li>
         
         <li class="FlexLista">
-          <a  class="txtNav " href="/ot">
+          <a  class="txtNav " href="/historial">
             Historial
           </a>
         </li>
@@ -37,85 +37,11 @@
 
     <main class="content">
      
-     <!--- <div class="barraGeneral">
-
-        <ul class="OTflex">
-          <li class="listaFlex">
-              <h1 class="placeholderSelector"></h1>
-              <select id="edificio" aria-placeholder="EDIFICIO" name="select" class="txtSelect selectBoton" [(ngModel)]="selectedEdificio">
-                <option value="" disabled>EDIFICIO</option>
-                <option  *ngFor="let edificio of edificios" [value]="edificio.nombre">{{ edificio.nombre }}</option>
-              </select>
-          </li>
-
-          <li class="listaFlex2">
-              <select id="piso" name="select" class="selectBoton" placeholder [(ngModel)]="selectedPiso">
-                <option value="" disabled>PISO</option>
-                  <option *ngFor="let piso of pisos" [value]="piso.nombre">{{ piso.nombre }}</option>
-              </select>
-              </li>  
-
-            <li class="listaFlex2">
-                <select name="select" class="selectBoton" placeholder [(ngModel)]="selectedSector">
-                  <option value="" disabled>SECTOR</option>
-                    <option *ngFor="let sector of sectores" [value]="sector.nombre">{{ sector.nombre }}</option>   
-                </select>
-            </li>   
-
-            <li class="listaFlex2">
-              <select name="select" class="selectBoton" placeholder [(ngModel)]="selectedTipoActivo">
-                  <option value="" disabled>ACTIVO</option>
-                  <option *ngFor="let activo of tiposActivo" [value]="activo.nombre">{{ activo.nombre }}</option>
-              </select>
-              </li>  
-
-              <li class="listaFlex2">
-                <select name="select" class="selectBoton" placeholder [(ngModel)]="selectedUbicacion">
-                  <option value="" disabled>UBICACION</option>
-                    <option *ngFor="let ubicacion of ubicaciones" [value]="ubicacion.nombre">{{ ubicacion.nombre }}</option>
-                </select>
-                </li>
-          </ul>
-
-          <span class="btnFlex">
-          <button class="btnBorrar" (click)="borrarSeleccion()">BORRAR</button>
-          <button class="btnBorrar" (click)="imprimirPagina()">IMPRIMIR</button>
-          </span>
-      </div>
-      <div class="prueba">
-        <div class="seccionUnoOT">
-          <div class="parent">
-            <div class="gridLineas div1 bgTareas"><h2 class="textoOT_Titulo">Orden de Trabajo UTN </h2></div>
-            <div class="gridLineas div2"> <h2 class="textoOT">OT | ILUM - 001003001001001 - 001 </h2> </div>
-            <div class="gridLineas div3"><h2 class="textoOT">CUIA| ILUM - 001003001001001 - 001 </h2> </div>
-            <div class="gridLineas div4"><h2 class="textoOT">TIPO DE ACTIVO  | {{selectedTipoActivo }}</h2> </div>
-            <div class="gridLineas div5"><h2 class="textoOT">EDIFICIO  | {{selectedEdificio }} </h2> </div>
-            <div class="gridLineas div6"><h2 class="textoOT">PISO/NIVEL  |{{selectedPiso }} </h2>  </div>
-            <div class="gridLineas div7"><h2 class="textoOT">SECTOR  | {{ selectedSector }}</h2>  </div>
-            <div class="gridLineas div8 "><h2 class="textoOT">UBICACION | {{selectedUbicacion}}</h2></div>
-            <button class="btnBorrar"></button>
-          </div>  
-          
-          <div class="parent2">
-            <div class="gridLineas div9 bgTareas"><h3 class="textoOT">#</h3> <h2 class="textoOT"> INSTRUCCIONES DE LA TAREA</h2>  </div>
-            <div class="gridLineas div10"><h3 class="textoOT">1 |</h3> <h2 class="textoOT"> Señalice el área de Trabajo. Desconecte la energía eléctrica | Verificar NO exisitencia de tensión.	</h2>   </div>
-            <div class="gridLineas div11"><h3 class="textoOT">2 |</h3> <h2 class="textoOT"> Control de louver.</h2>   </div>
-            <div class="gridLineas div12"><h3 class="textoOT">3 |</h3> <h2 class="textoOT"> Verificación de  funcionamiento de la totalidad de las lámparas.</h2>   </div>
-            <div class="gridLineas div13"><h3 class="textoOT">4 |</h3> <h2 class="textoOT"> Verificación de estados de zocalos y/o portalámparas.</h2>   </div>
-            <div class="gridLineas div14"><h3 class="textoOT">5 |</h3> <h2 class="textoOT"> Limpieza de luminaria y lampara.</h2></div>
-            <div class="gridLineas div15"><h3 class="textoOT">6 |</h3> <h2 class="textoOT"> Verificar correcto montaje y sujección.</h2> </div>
-            <div class="gridLineas div16"><h3 class="textoOT">7 |</h3> <h2 class="textoOT"> Verifique correcto funcionamiento del equipo luego de finalizada la actividad.</h2> </div>
-            <div class="gridLineas div17"><h3 class="textoOT">8 |</h3> <h2 class="textoOT"> - </h2> </div>
-            <div class="gridLineas div18"><h3 class="textoOT">9 |</h3> <h2 class="textoOT"> Complete la documentación de mantenimiento</h2> </div>
-            <div class="gridLineas div19"><h3 class="textoOT">10|</h3> <h2 class="textoOT"> Al finalizar la actividad deje el área y equipo limpios, ordenados y seguros.</h2> </div>
-            </div>
-        </div> -->
-        
         <div class="form-container">
           <div class="form-group">
-              <select class="selectOptions" aria-placeholder="EDIFICIO"  [(ngModel)]="selectedEdificio">
+              <select class="selectOptions"  [(ngModel)]="selectedEdificio">
                 <option value="" disabled>EDIFICIO</option>
-                <option  *ngFor="let edificio of edificios" [value]="edificio.nombre">{{ edificio.nombre }}</option>
+                <option  *ngFor="let edificio of datosEdificio" [value]="edificio.nombre">{{ edificio.Nombre }}</option>
               </select>  
               
           </div>
@@ -123,7 +49,7 @@
           <div class="form-group">
               <select class="selectOptions" [(ngModel)]="selectedPiso">
                   <option value="" disabled>PISO</option>
-                  <option *ngFor="let piso of pisos" [value]="piso.nombre">{{ piso.nombre }}</option>
+                  <option *ngFor="let piso of datosPiso" [value]="piso.nombre">{{ piso.Nombre }}</option>
                   
               </select>
               
@@ -132,7 +58,7 @@
           <div class="form-group">
               <select class="selectOptions" [(ngModel)]="selectedSector">
                   <option value="" disabled>SECTOR</option>
-                  <option *ngFor="let sector of sectores" [value]="sector.nombre">{{ sector.nombre }} </option>
+                  <!-- <option *ngFor="let sector of sectores" [value]="sector.nombre">{{ sector.nombre }} </option> -->
               </select>
               
           </div>
@@ -140,7 +66,7 @@
           <div class="form-group">
               <select class="selectOptions" [(ngModel)]="selectedUbicacion">
                   <option value="" disabled>UBICACION</option>
-                  <option *ngFor="let ubicacion of ubicaciones" [value]="ubicacion.nombre">{{ ubicacion.nombre }}</option>
+                  <option *ngFor="let ubicacion of datosUbicacion" [value]="ubicacion.nombre">{{ ubicacion.Nombre }}</option>
                   
               </select>
               
@@ -149,7 +75,7 @@
           <div class="form-group">
               <select class="selectOptions" [(ngModel)]="selectedTipoActivo">
                   <option value="" disabled>ACTIVO</option>
-                  <option *ngFor="let activo of tiposActivo" [value]="activo.nombre">{{ activo.nombre }}</option>
+                  <option *ngFor="let activo of datosActivo" [value]="activo.nombre">{{ activo.Nombre }}</option>
     
               </select>
               
@@ -215,8 +141,3 @@
 
       
       </main>
-
-    
-
-
-    
