--- a/frontEnd/src/app/components/login/login.component.html
+++ b/frontEnd/src/app/components/login/login.component.html
@@ -1,43 +1,38 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="es" dir="ltr">
   <head>
     <meta charset="utf-8">
     <title>Formulario Login</title>
   </head>
   <body>
-
     <div class="wrapper">
-
       <div class="card-switch">
-          <label class="switch">
-             <input type="checkbox" class="toggle">
-             <span class="slider"></span>
-             <span class="card-side"></span>
-             <div class="flip-card__inner">
-                <div class="flip-card__front">
-                   <div class="title">Ingresar</div>
-                   <form class="flip-card__form" action="">
-                      <input class="flip-card__input" name="email" placeholder="Usuario" type="email">
-                      <input class="flip-card__input" name="password" placeholder="Contraseña" type="password">
-                      <button class="flip-card__btn"><a href="/ot">Log in</a></button>
-                   </form>
-                </div>
+        <label class="switch">
+          <input type="checkbox" class="toggle">
+          <span class="slider"></span>
+          <span class="card-side"></span>
+          <div class="flip-card__inner">
+            <div class="flip-card__front">
+              <div class="title">Ingresar</div>
+              <form class="flip-card__form" (ngSubmit)="login()">
+                <input class="flip-card__input" [(ngModel)]="mail" name="mail" placeholder="Usuario" type="email" required>
+                <input class="flip-card__input" [(ngModel)]="contrasena" name="contrasena" placeholder="Contraseña" type="password" required>
+                <button class="flip-card__btn" type="submit">Log in</button>
+              </form>
+            </div>
 
-                <div class="flip-card__back">
-                   <div class="title">Registrate</div>
-                   <form class="flip-card__form" action="">
-                      <input class="flip-card__input" placeholder="Usuario" type="name">
-                      <input class="flip-card__input" name="email" placeholder="E-Mail" type="email">
-                      <input class="flip-card__input" name="password" placeholder="Contraseña" type="password">
-                      <button class="flip-card__btn">Confirmar</button>
-                   </form>
-                </div>
-             </div>
-          </label>
-      </div>   
- </div>
-        <!-- <div class="BotonDireccion">
-        <button class="buttons" type="submit" >Login</button> 
-          </div>-->
+            <div class="flip-card__back">
+              <div class="title">Registrate</div>
+              <form class="flip-card__form" (ngSubmit)="register()">
+                <input class="flip-card__input" [(ngModel)]="nombre" name="nombre" placeholder="Nombre" type="text" required>
+                <input class="flip-card__input" [(ngModel)]="mail" name="email" placeholder="E-Mail" type="email" required>
+                <input class="flip-card__input" [(ngModel)]="contrasena" name="contraseña" placeholder="Contraseña" type="password" required>
+                <button class="flip-card__btn" type="submit">Confirmar</button>
+              </form>
+            </div>
+          </div>
+        </label>
+      </div>
+    </div>
   </body>
 </html>
