--- a/frontEnd/src/app/components/orden-trabajo/orden-trabajo.component.html
+++ b/frontEnd/src/app/components/orden-trabajo/orden-trabajo.component.html
@@ -1,5 +1,8 @@
 <head>
+
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&display=swap" />
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfobject/2.2.6/pdfobject.min.js"></script>
   </head>
 <div class="container">
     <nav class="sidebar">
@@ -39,9 +42,9 @@
      
         <div class="form-container">
           <div class="form-group">
-              <select class="selectOptions"  [(ngModel)]="selectedEdificio">
-                <option value="" disabled>EDIFICIO</option>
-                <option  *ngFor="let edificio of datosEdificio" [value]="edificio.nombre">{{ edificio.Nombre }}</option>
+              <select class="selectOptions" [(ngModel)]="selectedEdificio">
+                <option value="" disabled selected hidden>EDIFICIO</option>
+                <option  *ngFor="let edificio of datosEdificio" [ngValue]="edificio.Nombre">{{ edificio.Nombre }}</option>
               </select>  
               
           </div>
@@ -49,7 +52,7 @@
           <div class="form-group">
               <select class="selectOptions" [(ngModel)]="selectedPiso">
                   <option value="" disabled>PISO</option>
-                  <option *ngFor="let piso of datosPiso" [value]="piso.nombre">{{ piso.Nombre }}</option>
+                  <option *ngFor="let piso of datosPiso" [ngValue]="piso.Nombre">{{ piso.Nombre }}</option>
                   
               </select>
               
@@ -58,7 +61,7 @@
           <div class="form-group">
               <select class="selectOptions" [(ngModel)]="selectedSector">
                   <option value="" disabled>SECTOR</option>
-                  <!-- <option *ngFor="let sector of sectores" [value]="sector.nombre">{{ sector.nombre }} </option> -->
+                  <option *ngFor="let sector of datosSector" [ngValue]="sector.Sector">{{ sector.Sector }} </option> 
               </select>
               
           </div>
@@ -66,7 +69,7 @@
           <div class="form-group">
               <select class="selectOptions" [(ngModel)]="selectedUbicacion">
                   <option value="" disabled>UBICACION</option>
-                  <option *ngFor="let ubicacion of datosUbicacion" [value]="ubicacion.nombre">{{ ubicacion.Nombre }}</option>
+                  <option *ngFor="let ubicacion of datosUbicacion" [ngValue]="ubicacion.Nombre">{{ ubicacion.Nombre }}</option>
                   
               </select>
               
@@ -75,69 +78,88 @@
           <div class="form-group">
               <select class="selectOptions" [(ngModel)]="selectedTipoActivo">
                   <option value="" disabled>ACTIVO</option>
-                  <option *ngFor="let activo of datosActivo" [value]="activo.nombre">{{ activo.Nombre }}</option>
+                  <option *ngFor="let activo of datosActivo" [ngValue]="activo.Nombre">{{ activo.Nombre }}</option>
     
               </select>
               
           </div>
   
           <div class="form-group">
-              <select class="selectOptions">
-                  <option value="">Operario</option>
-                  <option value="1">Juan</option>
-                  <option value="2">Alberto</option>
-                  <option value="3">Luis</option>
+                <select class="selectOptions" [(ngModel)]="selectedUsuario">
+                  <option value="" disabled>OPERARIO</option>
+                  <option *ngFor="let usuario of datosUsuario" [ngValue]="usuario.nombre">{{ usuario.nombre }}</option>
               </select>
               
           </div>
   
-          <div class="form-group">
+          <!-- <div class="form-group">
               <select class="selectOptions">
                   <option value="">Tipo de tarea</option>
                   <option value="1">Preventiva</option>
                   <option value="2">Urgente</option>
                   <option value="3">Diagramada</option>
-              </select>
-              
-          </div>
+              </select> 
+          </div>-->
   
           <div class="form-group">
-              <select class="selectOptions">
-                  <option value="">Tareas</option>
-                  <option value="1">Opción 1</option>
-                  <option value="2">Opción 2</option>
-                  <option value="3">Opción 3</option>
+            <select multiple type class="selectOptions opcionMultiple" [(ngModel)]="selectedTareas">
+              <option value="" disabled>TAREAS</option>
+              <option *ngFor="let tarea of datosTareas" [ngValue]="tarea.Descripcion">{{ tarea.Descripcion }}</option>
               </select>
-              <input class="inputFormOT selectInput" type="text" placeholder="">
+           
           </div>
   
           <div class="form-group formBottom">      
-              <input class="inputFormOT inputDate" type="date" placeholder="Ingrese información">
+              <input class="inputFormOT inputDate" #fechaInput type="date" placeholder="Ingrese información">
+          </div>
+
+
+          <div class="form-buttons">
+            <button type="submit" class="btn-submit" (click)="guardarEnOT()">Crear</button>
           </div>
           <div class="form-buttons">
-            <button type="submit" class="btn-submit">Crear</button>
-        </div>
+            <button class="btn-submit" (click)="generatePDF()">Generar PDF</button>
+          </div>
 
-        <div class="vistaPrevia">
+        <!-- <div class="vistaPrevia">
           <h1 class="vistaTXT"> </h1>
           <ul class="vistaPreviaUl">
             <li class="vistaPreviaLi liSubrayado">Vista Previa</li>
-            <li class="vistaPreviaLi">Edificio: {{ selectedEdificio}} </li>
+            <li class="vistaPreviaLi" >Edificio: {{ selectedEdificio}} </li>
             <li class="vistaPreviaLi">Piso: {{ selectedPiso}}  </li>
             <li class="vistaPreviaLi">Sector: {{ selectedSector}}  </li>
             <li class="vistaPreviaLi">Ubicacion: {{ selectedUbicacion}}  </li>
             <li class="vistaPreviaLi">Activo: {{ selectedTipoActivo}} </li>
-            <li class="vistaPreviaLi">Operario: </li>
-            <li class="vistaPreviaLi">Tipo de tarea:  </li>
+            <li class="vistaPreviaLi">Operario: {{selectedUsuario}} </li>
+            <li class="vistaPreviaLi">Tareas: {{selectedTareas}} <br></li>
+            <li class="vistaPreviaLi" id="fechaSeleccionada">Fecha:   <br></li>
           </ul>
 
-        </div>
+         </div> -->
+
         
-      </div>  
-      
+         <div id="pdf-content" >
+          <h1 class="vistaPreviaLi">Orden de trabajo</h1>
+          <li class="vistaPreviaLi liSubrayado">Vista Previa</li>
+            <li class="vistaPreviaLi" >Edificio:  <strong>{{ selectedEdificio}}</strong> </li>
+            <li class="vistaPreviaLi">Piso: <strong>{{ selectedPiso}} </strong> </li>
+            <li class="vistaPreviaLi">Sector:  <strong>{{ selectedSector}} </strong> </li>
+            <li class="vistaPreviaLi">Ubicacion: <strong> {{ selectedUbicacion}} </strong>  </li>
+            <li class="vistaPreviaLi">Activo: <strong> {{ selectedTipoActivo}}</strong> </li>
+            <li class="vistaPreviaLi">Operario: <strong>{{selectedUsuario}} </strong></li>
+            <li class="vistaPreviaLi tareasStrong">Tareas: <br> <strong > {{selectedTareas}} </strong> <br></li>
+            <li class="vistaPreviaLi" id="fechaSeleccionada"><strong>Fecha:    </strong><br></li>
+            
+         </div>
 
+         <iframe *ngIf="pdfUrl" [src]="pdfUrl" width="100%" height="600px"></iframe>
 
+        </div>
 
-
-      
       </main>
+
+
+   
+      
+   
+ 
