--- a/frontEnd/src/app/components/entorno/entorno.component.html
+++ b/frontEnd/src/app/components/entorno/entorno.component.html
@@ -15,7 +15,7 @@
           </li>
   
           <li class="FlexLista dropdown">
-            <a href="/ot" class="txtNav txtNavOt dropbtn">Orden de trabajo</a>
+            <a href="/ot" class="txtNav txtNavOt dropbtn" *ngIf="isAdmin">Orden de trabajo</a>
           </li>
           
           <li class="FlexLista">
