mejoras al Login (comprobar nombres y formato E-mail)

--- a/frontEnd/src/app/components/login/login.component.html
+++ b/frontEnd/src/app/components/login/login.component.html
@@ -34,5 +34,14 @@
         </label>
       </div>
     </div>
+
+    <div class="notification" *ngIf="showNotification"
+         [ngClass]="{
+           'success': notificationType === 'success',
+           'error': notificationType === 'error',
+           'info': notificationType === 'info'
+         }">
+      {{ notificationMessage }}
+    </div>
   </body>
 </html>
