--- a/frontEnd/src/app/components/login/login.component.css
+++ b/frontEnd/src/app/components/login/login.component.css
@@ -211,6 +211,38 @@ body {
   color: var(--font-color);
   cursor: pointer;
 } 
+.notification {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background-color: #333;
+  color: #fff;
+  padding: 10px 20px;
+  border-radius: 5px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+  opacity: 0.9;
+  z-index: 1000;
+}
+
+.notification.show {
+  opacity: 0.9;
+  visibility: visible;
+}
+
+.notification.success {
+  background-color: #28a745;  
+  color: #fff;
+}
+
+.notification.error {
+  background-color: #dc3545;  
+  color: #fff;
+}
+
+.notification.info {
+  background-color: #17a2b8;  
+  color: #fff;
+}
 
 /*FIN LOGIN ENTERO*/
   
