--- a/frontEnd/src/app/components/historial/historial.component.css
+++ b/frontEnd/src/app/components/historial/historial.component.css
@@ -101,51 +101,176 @@
 
 /*FIN DEL NAV*/
 
-
-.tabla-container {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    margin-left: 15px;
-}
-table {
-    width: 85%;
-    border-collapse: collapse;
-    margin-bottom: 10px;
-    margin-top: 50px;
-    height: 30px;
-}
-th, td {
-    padding: 10px;
-    text-align: left;
-    height: 30px;
-}
-th {
-    background-color: #f4f4f4;
-    font-weight: bold;
-    height: 30px;
-}
-tr:nth-child(even) {
-    background-color: #f9f9f9;
-}
-tr:hover {
-    background-color: #e9e9e9;
-}
-.botones {
-    display: flex;
-    gap: 5px;
-}
-.boton {
-    border: none;
-    background-color: transparent;
-    cursor: pointer;
-    font-size: 16px;
-}
-.boton-editar {
-    color: #4CAF50;
-}
-.boton-eliminar {
-    color: #F44336;
+#tabla-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 50px;
 }
 
+.tabla-ot {
+  width: 80%;
+  border-collapse: collapse;
+  margin-bottom: 15px;
+}
 
+.tabla-encabezado {
+  background-color: #b0c0d4;
+  text-align: center;
+  padding: 10px;
+  font-weight: bold;
+}
+
+.tabla-edificio, .tabla-piso, .tabla-ubicacion, .tabla-sector, .tabla-activo, .tabla-operario {
+  text-align: center;
+  padding: 10px;
+  border: 1px solid #ddd;
+}
+
+.tabla-ot tbody tr {
+  background-color: #e7f0f3;
+}
+.tabla-encabezado{
+  font-family: 'Arial';
+}
+
+.tablaTXT{
+  font-family: 'Arial';
+}
+.delete-btn{
+  height: 30px;
+  width: 30px;
+}
+
+/*popup*/
+
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+/* Contenido del modal */
+.modal-content {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  text-align: center;
+  max-width: 300px;
+  width: 100%;
+}
+
+/* Mensaje dentro del modal */
+.modal-message {
+  margin-bottom: 20px;
+  font-size: 16px;
+  font-family: Arial, Helvetica, sans-serif;
+  color: #333;
+}
+
+/* Botón de confirmación */
+.modal-confirm-button {
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-right: 10px;
+}
+
+.modal-confirm-button:hover {
+  background-color: #45a049;
+}
+
+/* Botón de cancelación */
+.modal-cancel-button {
+  background-color: #f44336;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.modal-cancel-button:hover {
+  background-color: #d32f2f;
+}
+
+.divFilter{
+  display: flex;
+  flex-direction: column;
+  margin-left: 25%;
+  width: 50%;
+}
+.selectFilter{
+  height: 30px;
+  border-radius: 7px;
+  background: #156b8d;
+  color: white;
+}
+.selectFilter:hover{
+  height: 30px;
+  border-radius: 7px;
+  background: #3ba3cc;
+  color: white;
+}
+.LabelFilter{
+  font-family: Arial, Helvetica, sans-serif;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-top: 15px;
+}
+.botonTilde{
+  height: 30px;
+  width: 30px;
+}
+.btnReinicio{
+  margin-top: 15px;
+  height: 30px;
+  width: 80px;
+  margin-left: 45px;
+  background: #6497ac;
+  border-radius: 5px;
+}
+.TXTReinicio{
+  text-decoration: none;
+  font-family: Arial, Helvetica, sans-serif;
+  color: white;
+}
+
+.popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.7);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.popup-content {
+  background: white;
+  padding: 20px;
+  border-radius: 8px;
+  width: 400px;
+  position: relative;
+}
+
+.close {
+  font-size: 24px;
+  color: red;
+  cursor: pointer;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
