--- a/frontEnd/src/app/components/historial/historial.component.html
+++ b/frontEnd/src/app/components/historial/historial.component.html
@@ -4,10 +4,7 @@
         <ul class="ULestilo">
           <li class="FlexLista" ><img class="imgIcono" src="https://www.utn.edu.ar/images/logo-utn.png" alt=""></li>
   
-          <li class="FlexLista">
-            <a class="txtNav letrasMenu" href="/inicio">
-            Inicio </a>
-          </li>
+
   
           <li class="FlexLista dropdown">
             <a href="/ot" class="txtNav txtNavOt dropbtn">Orden de trabajo</a>
@@ -29,10 +26,72 @@
             </a>
           </li>
         </ul>
+        <div class="divFilter">
+          
+          <label class="LabelFilter" for="">Edificio</label>
+          <select class="selectFilter" [(ngModel)]="selectedEdificio" (change)="filtrarOTs()">
+            <option value="">Todos</option>
+            <option *ngFor="let edificio of edificios" [value]="edificio">{{ edificio }}</option>
+          </select>
+        
+          
+          <label class="LabelFilter" for="">Piso</label>
+          <select class="selectFilter" [(ngModel)]="selectedPiso" (change)="filtrarOTs()">
+            <option value="" selected disabled>PISO</option>
+            <option value="">Todos</option>
+            <option *ngFor="let piso of pisos" [value]="piso">{{ piso }}</option>
+          </select>
+
+          <label class="LabelFilter" for="">Ubicación</label>
+          <select class="selectFilter" [(ngModel)]="selectedUbicacion" (change)="filtrarOTs()">
+            <option value="" selected disabled>UBICACIÓN</option>
+            <option value="">Todos</option>
+            <option *ngFor="let ubicacion of ubicaciones" [value]="ubicacion">{{ ubicacion }}</option>
+          </select>
+
+          <label class="LabelFilter" for="">Sector</label>
+          <select class="selectFilter" [(ngModel)]="selectedSector" (change)="filtrarOTs()">
+            <option value="" selected disabled>SECTOR</option>
+            <option value="">Todos</option>
+            <option *ngFor="let sector of sectores" [value]="sector">{{ sector }}</option>
+          </select>
+
+          <label class="LabelFilter" for="">Activo</label>
+          <select class="selectFilter" [(ngModel)]="selectedActivo" (change)="filtrarOTs()">
+            <option value="" selected disabled>ACTIVO</option>
+            <option value="">Todos</option>
+            <option *ngFor="let activo of activos" [value]="activo">{{ activo }}</option>
+          </select>
+          
+          <label class="LabelFilter" for="">Operario</label>
+          <select class="selectFilter" [(ngModel)]="selectedOperario" (change)="filtrarOTs()">
+            <option value="" selected disabled>OPERARIO</option>
+            <option value="">Todos</option>
+            <option *ngFor="let operario of operarios" [value]="operario">{{ operario }}</option>
+          </select>
+        
+        <button class="btnReinicio" (click)="reiniciar()"><a class="TXTReinicio" href="/historial">REINICIAR</a></button>
+          <!-- Agrega selectores similares para otros filtros si es necesario -->
+        </div>
         
       </nav>
       
-    <div class="tabla-container">
+      
+
+      <div id="tabla-container">
+
+
+
+
+
+      </div>
+
+   
+
+
+      <!--
+     <table>
+      <div id="tabla" class="tabla" >
         <table>
             <thead>
                 <tr>
@@ -45,39 +104,10 @@
                     <th>Operaciones</th>
                 </tr>
             </thead>
-            <tbody>
-                <tr>
-                    <td>Edificio 1</td>
-                    <td>Piso 2</td>
-                    <td>Sector A</td>
-                    <td>Ubicación 101</td>
-                    <td>Activo 001</td>
-                    <td>Operario 1</td>
-                    <td>
-                        <div class="botones">
-                            <button class="boton boton-editar" title="Editar">✏️</button>
-                            <button class="boton boton-eliminar" title="Eliminar">🗑️</button>
-                        </div>
-                    </td>
-                </tr>
-                <!-- Repetir filas según sea necesario -->
-                <tr>
-                    <td>Edificio 2</td>
-                    <td>Piso 3</td>
-                    <td>Sector B</td>
-                    <td>Ubicación 102</td>
-                    <td>Activo 002</td>
-                    <td>Operario 2</td>
-                    <td>
-                        <div class="botones">
-                            <button class="boton boton-editar" title="Editar">✏️</button>
-                            <button class="boton boton-eliminar" title="Eliminar">🗑️</button>
-                        </div>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-        <div></div>
+        </table> 
     </div>
-</div>
-    </body>
+        <div></div>
+     </table>
+    
+    </div>
+  </body>-->
