--- a/frontEnd/src/app/components/orden-trabajo/orden-trabajo.component.css
+++ b/frontEnd/src/app/components/orden-trabajo/orden-trabajo.component.css
@@ -665,3 +665,88 @@ iframe {
 
 
 /*FIN DE FORMULARIO*/
+
+/*modal ot*/
+.modal-overlay {
+  position: fixed !important;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+.modal-content {
+  background-color: white;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+  width: 80%;
+  max-width: 400px;
+  text-align: center;
+  z-index: 10000;
+}
+
+.modal-message {
+  font-size: 16px;
+  margin-bottom: 20px;
+}
+
+.modal-close-button {
+  background-color: #007BFF;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+  border-radius: 4px;
+}
+
+.modal-close-button:hover {
+  background-color: #0056b3;
+}
+
+/*fin modal ot*/
+
+.Btn {
+  --black: #000000;
+  --ch-black: #141414;
+  --eer-black: #1b1b1b;
+  --night-rider: #2e2e2e;
+  --white: #ffffff;
+  --af-white: #f3f3f3;
+  --ch-white: #e1e1e1;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  width: 45px;
+  height: 45px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  position: relative;
+  overflow: hidden;
+  transition-duration: .3s;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.199);
+  background-color: var(--night-rider);
+}
+/*botonlogout*/
+.botonSalir{
+  background: rgb(226, 92, 92);
+  margin-left: 115px;
+  width: 100px;
+  height: 45px;
+  display: flex;
+  flex-direction: row;
+  
+}
+.txtSalir{
+  font-family: Arial, Helvetica, sans-serif;
+  margin-top: 4px;
+}
+
+/*fin botonlogout*/
