--- a/frontEnd/src/app/components/historial/historial.component.css
+++ b/frontEnd/src/app/components/historial/historial.component.css
@@ -3,12 +3,11 @@
     margin: 0;
     padding: 0;
   }
-.container {
+  .container {
     display: grid;
     grid-template-columns: 350px 1fr; /* Menú de 250px y contenido restante */
     height: 100vh; /* Altura completa de la ventana */
     background-color: #d1d1d1;
-    
   }
   .imgIcono{
     height: 60px;
@@ -106,12 +105,14 @@
   flex-direction: column;
   align-items: center;
   margin-top: 50px;
+  
 }
 
 .tabla-ot {
   width: 80%;
   border-collapse: collapse;
   margin-bottom: 15px;
+  border-radius: 2px;
 }
 
 .tabla-encabezado {
@@ -119,12 +120,14 @@
   text-align: center;
   padding: 10px;
   font-weight: bold;
+ 
 }
 
 .tabla-edificio, .tabla-piso, .tabla-ubicacion, .tabla-sector, .tabla-activo, .tabla-operario {
   text-align: center;
   padding: 10px;
   border: 1px solid #ddd;
+  border-radius: 2px;
 }
 
 .tabla-ot tbody tr {
@@ -140,8 +143,13 @@
 .delete-btn{
   height: 30px;
   width: 30px;
+  background: #ee8888;
 }
-
+.btnCambio{
+  height: 30px;
+  width: 30px;
+  background: #aff390;
+}
 /*popup*/
 
 .modal-overlay {
@@ -228,9 +236,14 @@
   justify-content: center;
   margin-top: 15px;
 }
+.tablaButon{
+  width: 100px;
+}
+
 .botonTilde{
   height: 30px;
   width: 30px;
+  background: #8aeb9a;
 }
 .btnReinicio{
   margin-top: 15px;
@@ -246,31 +259,25 @@
   color: white;
 }
 
-.popup {
+.modal-overlay {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.7);
+  background: rgba(0, 0, 0, 0.5);
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
 }
 
-.popup-content {
+.modal-content {
   background: white;
   padding: 20px;
   border-radius: 8px;
-  width: 400px;
-  position: relative;
+  width: 300px;
 }
 
-.close {
-  font-size: 24px;
-  color: red;
-  cursor: pointer;
-  position: absolute;
-  top: 10px;
-  right: 10px;
+.modal-close-button {
+  margin-top: 15px;
 }
