--- a/frontEnd/src/app/components/login/login.component.html
+++ b/frontEnd/src/app/components/login/login.component.html
@@ -13,6 +13,7 @@
           <span class="card-side"></span>
           <div class="flip-card__inner">
             <div class="flip-card__front">
+              <div><img class="imgIcono" src="https://caimasegall.com.ar/wp-content/uploads/2020/08/logo-UTN-1.png" alt=""></div>
               <div class="title">Ingresar</div>
               <form class="flip-card__form" (ngSubmit)="login()">
                 <input class="flip-card__input" [(ngModel)]="mail" name="mail" placeholder="Usuario" type="email" required>
@@ -22,6 +23,7 @@
             </div>
 
             <div class="flip-card__back">
+              <div><img class="imgIcono" src="https://caimasegall.com.ar/wp-content/uploads/2020/08/logo-UTN-1.png" alt=""></div>
               <div class="title">Registrate</div>
               <form class="flip-card__form" (ngSubmit)="register()">
                 <input class="flip-card__input" [(ngModel)]="nombre" name="nombre" placeholder="Nombre" type="text" required>
