--- a/frontEnd/src/app/components/login/login.component.css
+++ b/frontEnd/src/app/components/login/login.component.css
@@ -17,7 +17,7 @@ body {
   --input-focus: #2d8cf0;
   --font-color: #323232;
   --font-color-sub: #666;
-  --bg-color: #fff;
+  --bg-color: #c5dff0;
   --bg-color-alt: #666;
   --main-color: #323232;
     display: flex; 
@@ -143,7 +143,7 @@ body {
   justify-content: center;
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
-  background: lightgrey;
+  background: rgb(143, 202, 250);
   gap: 20px;
   border-radius: 5px;
   border: 2px solid var(--main-color);
@@ -245,7 +245,13 @@ body {
 }
 
 /*FIN LOGIN ENTERO*/
-  
+
+
+.imgIcono{
+  height: 60px;
+  width: 220px;
+
+}
 
 /*.form-login {
 
