--- a/frontEnd/src/app/components/orden-trabajo/orden-trabajo.component.css
+++ b/frontEnd/src/app/components/orden-trabajo/orden-trabajo.component.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #4f368a;
+    background-color: #d1e1f3;
   }
   a{
     font-family:Arial;
@@ -12,7 +12,7 @@ body {
     display: grid;
     grid-template-columns: 350px 1fr; /* Menú de 250px y contenido restante */
     height: 100vh; /* Altura completa de la ventana */
-    background-color: #d1d1d1;
+    background-color: #d1e1f3;
   }
   .imgIcono{
     height: 60px;
@@ -24,7 +24,7 @@ body {
   .sidebar {
     background-color: #afc0d3;
     padding-top: 15px;
-    box-shadow: 2px 2px 15px 5px rgba(0, 0, 0, 0.2);
+    box-shadow: 2px 2px 20px 12px rgba(0, 0, 0, 0.2);
     /*box-shadow: 8px 4px #d8d7d8;*/
   }
   
@@ -75,10 +75,6 @@ body {
   .spanNavH{
     padding: 0 !important; 
   }
-
-  
-  
-  /* Dropdown */
   .dropdown-content {
     display: none;
     position: relative;
@@ -87,7 +83,7 @@ body {
     z-index: 1;
     
   }
-  
+
   .dropdown-content a {
     color: white;
     padding: 12px 20px;
