mejoras y arreglos en clase

--- a/frontEnd/src/app/components/historial/historial.component.css
+++ b/frontEnd/src/app/components/historial/historial.component.css
@@ -118,7 +118,7 @@
 }
 
 .tabla-encabezado {
-  background-color: #b0c0d4;
+  background-color: #a1c4df;
   text-align: center;
   padding: 10px;
   font-weight: bold;
@@ -133,7 +133,7 @@
 }
 
 .tabla-ot tbody tr {
-  background-color: #e7f0f3;
+  background-color: #e4f3f8;
 }
 .tabla-encabezado{
   font-family: 'Arial';
