--- a/frontEnd/src/app/components/login/login.component.html
+++ b/frontEnd/src/app/components/login/login.component.html
@@ -16,7 +16,7 @@
               <div><img class="imgIcono" src="https://caimasegall.com.ar/wp-content/uploads/2020/08/logo-UTN-1.png" alt=""></div>
               <div class="title">Ingresar</div>
               <form class="flip-card__form" (ngSubmit)="login()">
-                <input class="flip-card__input" [(ngModel)]="mail" name="mail" placeholder="Usuario" type="email" required>
+                <input class="flip-card__input" [(ngModel)]="mail" name="mail" placeholder="E-Mail" type="email" required>
                 <input class="flip-card__input" [(ngModel)]="contrasena" name="contrasena" placeholder="Contraseña" type="password" required>
                 <button class="flip-card__btn" type="submit">Log in</button>
               </form>
